--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,74 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+/* * {
+  font-family: "Merchant" !important;
+} */
+@font-face {
+  font-family: Merchant-thin;
+  src: url("/fonts/Merchant/Merchant-Thin.ttf") format("truetype");
+  font-weight: normal;
+  font-size: normal;
+}
+@font-face {
+  font-family: Syne;
+  src: url("/fonts/Syne/Syne-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-size: normal;
+}
+@font-face {
+  font-family: Assistant;
+  src: url("/fonts/Assistant/Assistant-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-size: normal;
+}
+
+.bg-color {
+  background-color: #fcfbfa;
+}
+.title-font {
+  font-family: Merchant-thin;
+}
+.sub-head {
+  font-family: Syne;
+  text-transform: capitalize;
+  color: rgba(212, 167, 167, 1);
+  line-height: 1.7;
+  letter-spacing: 0.15em;
+  font-size: 17px;
+  text-align: left;
+
+  font-weight: 500;
+  font-style: normal;
+}
+
+.txt {
+  font-family: Assistant;
+  color: rgba(47, 47, 47, 1);
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  font-size: 16px;
+  text-align: left;
+  font-weight: 300;
+  font-style: normal;
+}
+.btn {
+  border-color: rgba(231, 201, 201, 1);
+  border-width: 0px;
+  background-color: rgba(243, 232, 232, 1);
+  transition-duration: 0.5s;
+  transition-property: background-color, border-color;
+  border-style: solid;
+  border-radius: 10px;
+  font-family: Syne;
+  color: rgba(47, 47, 47, 1);
+  text-transform: uppercase;
+  line-height: 1;
+  letter-spacing: 0.12em;
+  font-size: 13px;
+  text-align: left;
+  font-family: "Syne";
+  font-weight: 500;
+  font-style: normal;
+  transition-duration: 0.5s;
+  transition-property: color;
+}
