book-appointment, services-page and home

--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -1,5 +1,5 @@
 <section
-  class="min-h-[80vh] bg-cover bg-center"
+  class="min-h-[80vh] bg-cover bg-fixed bg-center"
   style="
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url('/william-shu-G8RhW9reUuc-unsplash.jpg');
