--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="w-[55%] self-start h-[80vh]">
     <img
-      src="kaboompics_applying-facial-serum-for-enhanced-skin-care-32025.jpg"
+      src="IMG_3769.jpeg"
       alt="img"
       class="w-full h-full object-cover rounded shadow"
     />
@@ -78,7 +78,7 @@
     <!-- Card 3 -->
     <div class="relative w-72 h-[420px] overflow-hidden shadow-lg">
       <img
-        src="pexels-victoria-strelkaph-11780719.jpg"
+        src="IMG_3150.jpeg"
         alt="About Us"
         class="w-full h-full object-cover"
       />
