--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet></router-outlet>
+<div class="pb-26"><app-nav-bar></app-nav-bar></div>
+<div><router-outlet></router-outlet></div>
+
 <div>
   <app-footer> </app-footer>
 </div>
